Timestamp support, new icon

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -49,6 +49,9 @@
       <setting name="runOnStartup" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="timestamps" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
