--- a/CustomRPC/packages.config
+++ b/CustomRPC/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DiscordRichPresence" version="1.0.77" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
 </packages>
