New update checking handling (again), first time launch prompt

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -52,6 +52,12 @@
       <setting name="timestamps" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="firstStart" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="checkUpdates" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
