Skipping versions functionality

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -58,6 +58,9 @@
       <setting name="checkUpdates" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="ignoreVersion" serializeAs="String">
+        <value />
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
