--- a/CustomRPC/packages.config
+++ b/CustomRPC/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DiscordRichPresence" version="1.0.108" targetFramework="net471" />
+  <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net471" />
+  <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net471" />
+  <package id="Octokit" version="0.32.0" targetFramework="net471" />
 </packages>
