--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -1,47 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="CustomRPC.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="CustomRPC.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
     <CustomRPC.Properties.Settings>
       <setting name="id" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="details" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="state" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="smallKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="smallText" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="largeKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="largeText" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="startMinimized" serializeAs="String">
         <value>False</value>
@@ -59,7 +59,7 @@
         <value>True</value>
       </setting>
       <setting name="ignoreVersion" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
