Party, verbal connection status, can only run one instance, oktokit update, bugfixes

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -23,25 +23,25 @@
   <userSettings>
     <CustomRPC.Properties.Settings>
       <setting name="id" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="details" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="state" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="smallKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="smallText" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="largeKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="largeText" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="startMinimized" serializeAs="String">
         <value>False</value>
@@ -59,7 +59,13 @@
         <value>True</value>
       </setting>
       <setting name="ignoreVersion" serializeAs="String">
-        <value/>
+        <value />
+      </setting>
+      <setting name="partySize" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="partyMax" serializeAs="String">
+        <value>0</value>
       </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
