--- a/CustomRPC/Properties/Settings.settings
+++ b/CustomRPC/Properties/Settings.settings
@@ -41,5 +41,11 @@
     <Setting Name="ignoreVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="partySize" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="partyMax" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
