--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -67,6 +67,9 @@
       <setting name="partyMax" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="customTimestamp" serializeAs="String">
+        <value>1969-01-01</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
