--- a/CustomRPC/Properties/Settings.settings
+++ b/CustomRPC/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="partyMax" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="customTimestamp" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">1969-01-01</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
