Added Italian, updated DiscordRPC, started working on buttons

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -70,6 +70,18 @@
       <setting name="customTimestamp" serializeAs="String">
         <value>1969-01-01</value>
       </setting>
+      <setting name="button1Label" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="button1Url" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="button2Label" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="button2Url" serializeAs="String">
+        <value />
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
