Buttons implemented, everything is translated

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -70,16 +70,16 @@
       <setting name="customTimestamp" serializeAs="String">
         <value>1969-01-01</value>
       </setting>
-      <setting name="button1Label" serializeAs="String">
+      <setting name="button1Text" serializeAs="String">
         <value />
       </setting>
-      <setting name="button1Url" serializeAs="String">
+      <setting name="button1URL" serializeAs="String">
         <value />
       </setting>
-      <setting name="button2Label" serializeAs="String">
+      <setting name="button2Text" serializeAs="String">
         <value />
       </setting>
-      <setting name="button2Url" serializeAs="String">
+      <setting name="button2URL" serializeAs="String">
         <value />
       </setting>
     </CustomRPC.Properties.Settings>
