--- a/CustomRPC/Properties/Settings.settings
+++ b/CustomRPC/Properties/Settings.settings
@@ -50,16 +50,16 @@
     <Setting Name="customTimestamp" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">1969-01-01</Value>
     </Setting>
-    <Setting Name="button1Label" Type="System.String" Scope="User">
+    <Setting Name="button1Text" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="button1Url" Type="System.String" Scope="User">
+    <Setting Name="button1URL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="button2Label" Type="System.String" Scope="User">
+    <Setting Name="button2Text" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="button2Url" Type="System.String" Scope="User">
+    <Setting Name="button2URL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
