Fixed "Update Presence" pos in some languages, added Hebrew and Portuguese (BR), added language option

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -82,6 +82,9 @@
       <setting name="button2URL" serializeAs="String">
         <value />
       </setting>
+      <setting name="language" serializeAs="String">
+        <value>auto</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
