After changing a language the app will ignore Start Minimized parameter

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -85,6 +85,9 @@
       <setting name="language" serializeAs="String">
         <value>auto</value>
       </setting>
+      <setting name="changedLanguage" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
